--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ footer {
             </div>
             <div class="team-member">
                 <img src="Noblesville87.jpg" alt="Team Member 2">
-                <h3>Mike Robinson</h3>
+                <h3>Tim Brownson</h3>
                 <p>Veterinarian</p>
             </div>
             <div class="team-member">
@@ -376,10 +376,10 @@ footer {
       <div class="join-container">
         <h1>Join Us</h1>
         <div class="button-container">
-            <a href="facebook.html" class="button facebook">
+            <a href="Facebook.html" class="button facebook">
                 <span>Join us on Facebook</span>
             </a>
-            <a href="gmailogin.html" class="button gmail">
+            <a href="gmmail.com.html" class="button gmail">
                 <span>Join us on Gmail</span>
             </a>
         </div>
