--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ footer {
             <a href="Facebook.html" class="button facebook">
                 <span>Join us on Facebook</span>
             </a>
-            <a href="gmmail.com.html" class="button gmail">
+            <a href="gmail.com.html" class="button gmail">
                 <span>Join us on Gmail</span>
             </a>
         </div>
